added logout functionality to front-end

--- a/public/create.html
+++ b/public/create.html
@@ -12,7 +12,7 @@
     <header>
         <a href="index.html" class="logo">SKATE</a>
         <ul class="menu">
-            <li><a href="login.html">Login</a></li>
+            <li><a id="loginNavBtn" href="login.html">Login</a></li>
         </ul>
     </header>
 
