--- a/public/posts_page.html
+++ b/public/posts_page.html
@@ -13,7 +13,7 @@
         <a href="index.html" class="logo">SKATE</a>
         <ul class="menu">
             <li><a href="create.html">Create A Post</a></li>
-            <li><a href="login.html">Login</a></li>
+            <li><a id="loginNavBtn" href="login.html">Login</a></li>
         </ul>
     </header>
 
