added error handling in front-end

--- a/public/create.html
+++ b/public/create.html
@@ -16,6 +16,8 @@
         </ul>
     </header>
 
+    <div class="error"></div>
+
     <form class="form_container">
         <label for="Name"><b>Name</b></label>
         <input id='nameField' type="text" placeholder="Enter Email" name="email" required>
