--- a/public/login.html
+++ b/public/login.html
@@ -15,7 +15,7 @@
             <li><a href="register.html">Register</a></li>
         </ul>
     </header>
-
+    <div class="error"></div>
     <form class="form_container">
         <label for="email"><b>Email</b></label>
         <input id='emailField' type="text" placeholder="Enter Email" name="email" required>
