--- a/public/register.html
+++ b/public/register.html
@@ -12,7 +12,7 @@
     <header>
         <a href="index.html" class="logo">SKATE</a>
     </header>
-
+    <div class="error"></div>
     <form class="form_container">
         <label for="email"><b>Email</b></label>
         <input id='emailField' type="text" placeholder="Enter Email" name="email" required>
