added comment model, profile pictures, and switched to cookies

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
     <header>
-        <a href="index.html" class="logo">SKATE</a>
+        <a href="index.html" class="logo">TAMUSKATE</a>
         <ul class="menu">
+            <li><a href="posts_page.html">Posts</a></li>
             <li><a href="create.html">Create A Post</a></li>
             <li><a id="loginNavBtn" href="login.html">Login</a></li>
         </ul>
