--- a/public/create.html
+++ b/public/create.html
@@ -12,6 +12,7 @@
     <header>
         <a href="index.html" class="logo">SKATE</a>
         <ul class="menu">
+            <li><a href="posts_page.html">Posts</a></li>
             <li><a id="loginNavBtn" href="login.html">Login</a></li>
         </ul>
     </header>
